# own-arxiv-helpers

./: README.md  categories.yml  fix.py  main.py  pyproject.toml
.github/workflows/: fix.yml  main.yml
scripts/: mypy.sh
src/own_arxiv_helpers/: __init__.py  fetch.py  paper.py
